# rp2_testes_automatizados

./: .gitignore  CT-33-1.py  CT-33-2.py  CT33-1.py  CT33-2.py  CT33-3.py  CT33-4.py  CT34-1.py  CT34-2.py  CT34-3.py  CT34-4.py  CT34-5.py  CT34-6.py  CT34-7.py  CT35-1.py  CT35-2.py  CT35-3.py  CT35-4.py  CT35_2-1.py  CT35_2-2.py  CT36-1.py  CT36-2.py  CT37-1.py  CT37-2.py  CT37-3.py  LICENSE  README.md  auth.js  driver.js  force_reload.txt  index.js  last_credentials_update.txt  package-lock.json  package.json  pyproject.toml  report.html
.google-chrome-config/: Local State
CTs/: CT48-1.js  CT48-2.js  CT48.js  CT49-1.js  CT49-2.js  CT49-3.js  CT49.js  CT50.js  CT51.js  CT52.js  CT53.js  CT54.js  CT55.js
TestesSelenium/: CT-03-1.py  CT-04-2.py  login_selenium.py  teste_cadastro_curso.py  teste_edicao_curso_2.py  teste_edicao_perfil_1.py  teste_edicao_perfil_2.py  teste_exclusao_curso_1.py
testes_RF17/: teste_CT17_1.py  teste_CT17_3py  teste_CT17_4.py
testes_RF18/: teste_CT18_3.py
testes_RF19/: teste_CT19.py  teste_CT19_2.py  teste_CT19_4.py  teste_CT19_5.py  teste_CT19_6.py  teste_CT19_7.py
testes_RF20/: teste_CT20_1.py  teste_CT20_4.py  teste_CT20_5.py  testes_CT20_2.py
testes_amanda/: README.md  test_rf009.py  test_rf010.py  test_rf011.py
testes_rafaela_pn/: CT-01-1.py  CT-01-2.py  CT-02.py  CT-03-1.py  CT-03-2.py  CT-04-1.py  CT-04-2.py
tests/: login.py  test_CT40-1.py  test_CT40-2.py  test_CT41-1.py  test_CT42.py  test_CT43.py  test_CT44-1.py  test_CT44-2.py  test_CT44-3.py  test_rf009.py  test_rf010.py  test_rf011.py  testeComentariosVazios_video.py  (+9 more)
(+185 files in other folders)
