[project]
name = "codefolio-playwright"
version = "0.1.0"
description = "Conjunto de testes automatizados para a plataforma Codefolio."
authors = [
    {name = "Amanda Dias",email = "amandadds.aluno@unipampa.edu.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-html (==3.2.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
